--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <body>
 <% include ./header %>
 
-<h5><%= message %></h5>
+<h5 style="color:red"><%= message %></h5>
 <div class="card">
 
     <form method="post" action="login">
